you can now approve and disapprove vendors as admin with appropriate filtering for other users and non-users

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,11 @@
  *= require_self
  */
 
- @import "bootstrap-sprockets";
+/* @import "bootstrap-sprockets";
  @import "bootstrap";
 
  @import "home_page_styles";
-
+*/
 
  @import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
 
