lat and long as well as directions work

--- a/app/assets/stylesheets/vendors.scss
+++ b/app/assets/stylesheets/vendors.scss
@@ -229,6 +229,7 @@ a.menubuttoncontainer {
 
 a.distancecontainer {
   width: 22%;
+  color: #D36318;
   background-image: url(distanceicon.svg);
   background-repeat: no-repeat;
   background-position: center center;
