--- a/public/css/WTT.css
+++ b/public/css/WTT.css
@@ -1,4 +1,4 @@
-/* // NORMALIZE // */
+/* // COLOR SCHEME: https://coolors.co/app/d15127-31343d-ecbc54-51a3a3-b0c0bc // */
 
 .html {
 }
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 100%;
-    background-color: #383838;
+    background-color: #31343D;
 }
 
 * {
@@ -26,7 +26,7 @@ body {
 	margin: 0 auto 0 auto;
 }
 
-.truck_container {
+.truck_open_maincontainer {
 	width: 100%;
 	height: 150px;
 	background-color: #D15127;
@@ -36,56 +36,75 @@ body {
 }
 
 .truck_distance_container {
-	width: 50px;
-	height: 50px;
-	border: 7px solid #D2D2D2;
+	width: 24.25%;
+	height: 64px;
+	border: 7px solid #ECBC54;
 	position: absolute;
-	top: 14px;
-	left: 14px;
+	top: 7px;
+	left: 7px;
+	text-align: center;
 }
 
-.truck_name {
+.truck_distance_text {
+	font-family: 'Oswald', sans-serif;
+	font-size: 2rem;
+	color: #ECBC54;
+	margin-bottom: 7px;
+	line-height: 110%;
+	position: relative;
+	display: inline-block;
+	top: 7px;
+}
+
+.truck_miles_text {
+	font-family: 'Georgia', sans-serif;
+	font-size: 1rem;
+	font-style: italic;
+	color: #ECBC54;
+	line-height: 110%;
+	position: relative;
+	display: inline-block;
+	right: 2px;
+}
+
+.truck_name_text {
 	width: auto;
 	height: auto;
 	font-family: 'Oswald', sans-serif;
 	font-size: 2rem;
 	text-align: right;
-	color: #D2D2D2;
+	color: #ECBC54;
 	line-height: 110%;
 	position: relative;
 	margin-top: 7px;
 	display: block;
 }
 
-.truck_description {
+.truck_description_text {
 	width: auto;
 	height: auto;
 	font-family: 'Georgia', serif;
 	font-size: 1rem;
 	font-style: italic;
 	text-align: right;
-	color: #D2D2D2;
+	color: #ECBC54;
 	position: relative;
 	display: block;
 }
 
-.truck_openclose_container {
+.truck_opensign_container {
 	width: 25%;
 	height: 65px;
-	background-color: #383838;
+	background-color: #31343D;
 	margin: 10px auto 0 auto;
 	float: left;
-	bottom: 7px;
-	left: 7px;
 	text-align: center;
-	/*display: flex;
-  	align-items: center*/
 }
 
-.truck_openclose_text {
+.truck_opensign_text {
 	font-family: 'Oswald', sans-serif;
 	font-size: 2rem;
-	color: #D2D2D2;
+	color: #ECBC54;
 	margin-bottom: 7px;
 	line-height: 110%;
 	position: relative;
@@ -97,7 +116,7 @@ body {
 	font-family: 'Georgia', sans-serif;
 	font-size: 1rem;
 	font-style: italic;
-	color: #D2D2D2;
+	color: #ECBC54;
 	line-height: 110%;
 	position: relative;
 	display: block;
@@ -106,7 +125,7 @@ body {
 .truck_buttons_container {
 	width: 75%;
 	height: 65px;
-	background-color: #383838;
+	background-color: #31343D;
 	border-left: 7px solid #D15127;
 	margin-top: 10px;
 	padding: 4px;
@@ -115,50 +134,116 @@ body {
 	right: 7px;
 }
 
-.truck_mapbutton_container {
+a.truck_mapbutton_container {
 	width: 100%;
 	height: 26px;
-	border: 2px solid #D2D2D2;
+	border: 2px solid #B0C0BC;
+	color: #B0C0BC;
 	float: left;
 	margin: 4px 0 0 0;
 	text-align: center;
 	padding-top: 3px;
+	text-decoration: none;
 }
 
-.truck_menubutton_container {
+a.truck_mapbutton_container:active {
+	border: 2px solid #51a3a3;
+	background-color: #51a3a3;
+	color: #31343D;
+	-webkit-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+a.truck_menubutton_container {
 	width: 49%;
 	height: 26px;
-	border: 2px solid #D2D2D2;
+	border: 2px solid #B0C0BC;
+	color: #B0C0BC;
 	float: left;
 	text-align: center;
 	position: relative;
 	padding-top: 5px;
+	text-decoration: none;
 }
 
-.truck_callbutton_container {
+a.truck_menubutton_container:active {
+	border: 2px solid #51a3a3;
+	background-color: #51a3a3;
+	color: #31343D;
+	-webkit-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+a.truck_callbutton_container {
 	width: 49%;
 	height: 26px;
-	border: 2px solid #D2D2D2;
+	border: 2px solid #B0C0BC;
+	color: #B0C0BC;
 	float: right;
 	text-align: center;
 	position: relative;
 	padding-top: 5px;
+	text-decoration: none;
+}
+
+a.truck_callbutton_container:active {
+	border: 2px solid #51a3a3;
+	background-color: #51a3a3;
+	color: #31343D;
+	-webkit-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
 }
 
 .truck_menucallbutton_text {
 	font-family: 'Georgia', sans-serif;
-	font-size: .75rem;
+	font-size: 1rem;
 	font-style: italic;
-	color: #D2D2D2;
-	line-height: 110%;
+	font-weight: 700;
+	color: inherit;
+	line-height: 75%;
+	letter-spacing: 1px;
 	position: relative;
 }
 
 .truck_mapbutton_text {
 	font-family: 'Georgia', sans-serif;
 	font-size: 1rem;
+	font-weight: 700;
 	font-style: italic;
-	color: #D2D2D2;
+	color: inherit;
+	line-height: 100%;
+	letter-spacing: 1px;
+	position: relative;
+}
+
+/* /// CLOSED /// */
+
+.truck_closed_maincontainer {
+	width: 100%;
+	height: 90px;
+	border: 2px solid #B0C0BC;
+	padding: 7px;
+	margin: 7px 0 0 0;
+	position: relative;
+}
+
+.truck_closedsign_container {
+	width: 25%;
+	height: 100%;
+	background-color: #31343D;
+	border-right: 2px solid #B0C0BC;
+	margin: 0 auto 0 auto;
+	text-align: center;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+.truck_closedsign_text {
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.25rem;
+	color: #ECBC54;
 	line-height: 110%;
 	position: relative;
+	padding: 15% 0 0 0;
 }
