--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,170 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+.home-bg {
+  background: url(WheretheTruckPHOTO.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: blur(20px);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.menu {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  font-size: 20px;
+}
+
+.menu-container {
+  position: absolute;
+  width: 100%;
+  color: #8A8A8A;
+  background-color: rgb(20,21,22);
+  display: none;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  right: 0;
+  box-shadow: 0px 0px 9px 2px black;
+  .menu-options {
+    padding: 60px 0;
+    width: 100%;
+    // padding: 0;
+    border-top: 1px solid #8A8A8A;
+
+    margin: 0;
+    .menu-option {
+      width: 100%;
+      height: 65px;
+      font-size: 24px;
+      padding: 15px 0;
+      box-sizing: border-box;
+      border-bottom: 1px solid #8A8A8A;
+    }
+  }
+  .close-menu {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 20px;
+  }
+}
+
+.home-container {
+  background-color: rgba(0,0,0,0.0);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  padding: 20px;
+  .header-text {
+    background: url(WheretheTruck.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 74%;
+    height: 150px;
+    margin: 30px auto 0;
+  }
+  h1, h2 {
+    font-family: "MatchbookRegular";
+    font-size: 30px;
+    margin-bottom: 80px;
+    display: inline-block;
+    margin: 80px 0 30px;
+    color: #FFFFFF;
+    letter-spacing: 7px;
+    transform : scale(1,1.5);
+    -webkit-transform:scale(1,1.5); /* Safari and Chrome */
+    -moz-transform:scale(1,1.5); /* Firefox */
+    -ms-transform:scale(1,1.5); /* IE 9+ */
+    -o-transform:scale(1,1.5); /* Opera */
+  }
+  .cta-input {
+    padding-top: 0;
+    position: relative;
+    input {
+      border: none;
+      color: #FFFFFF;
+      background: none;
+      font-size: 13px;
+      width: 100%;
+      text-align: center;
+      height: 100%;
+      // padding-left: 10%;
+      padding-top: 3px;
+      letter-spacing: 2px;
+      display: inline-block;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
+      transition: all 0.2s;
+    }
+    .fa-search {
+      position: absolute;
+      left: 13px;
+      top: 13px;
+      font-size: 16px;
+      opacity: 0;
+      -webkit-transition: all 0.2s;
+      -moz-transition: all 0.2s;
+      -ms-transition: all 0.2s;
+      -o-transition: all 0.2s;
+      transition: all 0.2s;
+    }
+  }
+  .cta-title {
+    border-top: 2px solid #FFFFFF;
+    width: 240px;
+    margin: 0 auto 70px;
+    line-height: 30px;
+    letter-spacing: 2px;
+    .cta {
+      margin-bottom: 50px;
+    }
+    .thin-line {
+      display: inline-block;
+      border-bottom: 1px solid #212121;
+      width: 10px;
+      margin: 0 10px 4px;
+    }
+    p {
+      padding: 12px 0;
+      margin: 0;
+      color: #FFFFFF;
+      display: inline-block;
+    }
+  }
+  .footer-content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    color: #6C6E6D;
+    background: #060807;
+    height: 100px;
+    padding-top: 30px;
+    box-sizing: border-box;
+    letter-spacing: 2px;
+    p, a {
+      display: inline-block;
+    }
+    a {
+      color: #BABCBB;
+    }
+  }
+}
