--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,23 @@
-<h2>Sign up</h2>
+<div class="home-bg"></div>
+<div class="home-blur"></div>
+<div class="home-container">
+  <h2>SIGN UP</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :email, required: true, autofocus: true, :class => 'cta', :placeholder => "email" %>
+      <%= f.input :password, required: true, :class => 'cta no-margin-bottom-input', :placeholder => "password", hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, required: true, :placeholder => "confirm password", :label_html => { :class => 'margin-top-input' } %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up", :class => "cta" %>
+      <%= link_to "Log In", new_user_session_path %>
+      </br>
+      </br>
+      <%= link_to 'Home', home_index_path %>
+    </div>
+  <% end %>
+</div>
