--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 
  @import "home_page_styles";
 */
+ @import "vendor_page";
 
  @import "devise_log_in_out_styles";
 
@@ -97,6 +98,9 @@
    -webkit-box-shadow: 0 0 0px 1000px white inset;
  }
 
+.fa {
+  color: #FFFFFF;
+}
  // input:-webkit-autofill {
  //   color: #2a2a2a !important;
  // }
